[metadata]
name = ff3
version = 1.0.1
author = Schoening Consulting, LLC
author_email = bschoeni+llc@gmail.com
description = Format Preserving Encryption (FPE) with FF3
url = https://github.com/mysto/python-fpe
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Topic :: Security :: Cryptography
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = ff3
install_requires = pycryptodome
python_requires = >=3.7

[options.entry_points]
console_scripts =
  ff3_encrypt = ff3.__main__:encrypt
  ff3_decrypt = ff3.__main__:decrypt
